[tool.poetry]
name = "e-archive"
version = "0.1.0"
description = ""
authors = ["Nakadzima9 <pascal.german@yandex.ru>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
